--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
         body{
     background-color: rgb(61, 58, 58);
     font-family: sans-serif;
-    color: rgb(221, 217, 217);
+    /* color: rgb(221, 217, 217); */
+   
 }
 .container{
     width: 350px;
@@ -48,11 +49,13 @@ button{
     align-items: center;
     justify-content: center;
     text-align: center;
+     color: white
     }
 .text-container{
     margin: 0 10px;
     background-color: transparent;
-    color: white;
+    /* color: white; */
+     color: black;
     font-size: 14px;
 }
 
